dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_reset_during_validate_with_buffered_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG Stream reset by peer stream_id=1 error_code=99
0:00:00.000000000 [main] DEBUG event=on_reset prev=PendingValidation next=Reset location=dc/s2n-quic-dc/src/stream/reader.rs:745:41
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=Reset final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
